--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "homepage": "https://github.com/Cakrabilisairo/kanban-client#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "sweetalert2": "^10.13.0",
     "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-google-login": "^2.0.5",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-sweetalert2": "^4.1.1"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
